Footer added, image fixed on safari for ios, pollyfills added.

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -34,6 +34,7 @@
 .portfolio-image {
   border: 3px solid #fff;
   background-color: #fff;
+  height: 194px;
   max-width: 200px;
   margin: 0 auto;
 }
